[package]
name = "auto-get-ustb-ammeter"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.8"
tokio = { version = "1", features = ["rt", "macros"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
iced = { version = "0.13.1", features = ["tokio"] }
